--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,63 @@
 <html>
 <head>
     <script src="../js/medida.js"></script>
-
+    <script src="../js/celsius.js"></script>
     <script>
-        p = new Medida("2F")
+        function get_val(){
+            let regexp = /([-+]?\d+(?:\.\d*)?)\s*([fFcCkK])/;
+            let aux = (original.value).split(" ");
+            let from = aux[0].match(regexp) //separamos el numero de la unidad
+            let p;
+            if(from == null){
+                converted.innerHTML = "Ha introducido una unidad no soportada";
+            }
+            else if (from[2] == 'C' || from[2] == 'c' ){
+                console.log("Es Celsius")
+                p = new Celsius(aux[0]);
+                console.log(p.get_val());
+            }
+
+            else if (from[2] == 'F' || from[2] == 'f' ){
+                console.log("Es Farenheir")
+                //p = new Farenheit(aux[0]);
+                converted.innerHTML = "Aún no está la clase Farenheit";
+            }
+
+            else if (from[2] == 'K' || from[2] == 'k' ){
+                console.log("Es Kelvin")
+                //p = new Kelvin(aux[0]);
+                converted.innerHTML = "Aún no está la clase Kelvin";
+            }
+
+            let to_ = aux[aux.length - 1];// HAcemos esto para contemplar la posibilidad de poner "to" o no
+            console.log(to_);
+
+            if (to_=='C' || to_ == 'c' ){
+                console.log("A celcius");
+                converted.innerHTML = "La temperatura es " + p.toCelcius();
+            }
+            else if (to_ == 'F' || to_ == 'f' ){
+                console.log("A Farenheir");
+                converted.innerHTML = "La temperatura es " + p.toFarenheit();
+            }
+            else if (to_ == 'K' || to_ == 'k' ){
+                console.log("A Kelvin");
+                converted.innerHTML = "La temperatura es " + p.toKelvin();
+            }
+
+
+
+
+
+
+
+        //  console.log(p.get_val());
+        //  converted.innerHTML = "La temperatura es " + p.toFarenheit();
+        }
+
     </script>
+
+
 
 </head>
 <body>
@@ -13,7 +66,7 @@
 <table>
     <tr>
         <th>Enter Temperature (examples: 32F, 45C, -2.5f):</th>
-        <td><input id="original" autofocus onchange="p.calculate();" placeholder="32F" size="50"></td>
+        <td><input id="original" autofocus onchange="get_val();" placeholder="32F" size="50"></td>
 
         <th>Converted Temperature:</th>
         <td><span class="output" id="converted"></span></td>
