--- a/html/index.html
+++ b/html/index.html
@@ -13,20 +13,20 @@
                 converted.innerHTML = "Ha introducido una unidad no soportada";
             }
             else if (from[2] == 'C' || from[2] == 'c' ){
-                console.log("Es Celsius")
+                console.log("Es Celsius");
                 p = new Celsius(aux[0]);
                 console.log(p.get_val());
             }
 
             else if (from[2] == 'F' || from[2] == 'f' ){
-                console.log("Es Fahrenheit")
+                console.log("Es Fahrenheit");
                 p = new Fahrenheit(aux[0]);
                 console.log(p.get_val());
                 //converted.innerHTML = "Aún no está la clase Farenheit";
             }
 
             else if (from[2] == 'K' || from[2] == 'k' ){
-                console.log("Es Kelvin")
+                console.log("Es Kelvin");
                 //p = new Kelvin(aux[0]);
                 converted.innerHTML = "Aún no está la clase Kelvin";
             }
