--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,8 @@
 <head>
     <script src="../js/medida.js"></script>
     <script src="../js/celsius.js"></script>
+    <script src="../js/kelvin.js"></script>
+    <script src="../js/fahr.js"></script>
     <script>
         function get_val(){
             let regexp = /([-+]?\d+(?:\.\d*)?)\s*([fFcCkK])/;
@@ -27,8 +29,8 @@
 
             else if (from[2] == 'K' || from[2] == 'k' ){
                 console.log("Es Kelvin")
-                //p = new Kelvin(aux[0]);
-                converted.innerHTML = "Aún no está la clase Kelvin";
+                p = new Kelvin(aux[0]);
+                console.log(p.get_val());
             }
 
             let to_ = aux[aux.length - 1];// HAcemos esto para contemplar la posibilidad de poner "to" o no
