--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <script src="../js/medida.js"></script>
+    <script src="../js/temperatura.js"></script>
     <script src="../js/celsius.js"></script>
+    <script src="../js/kelvin.js"></script>
+    <script src="../js/fahr.js"></script>
     <script>
         function get_val(){
             let regexp = /([-+]?\d+(?:\.\d*)?)\s*([fFcCkK])/;
