--- a/html/index.html
+++ b/html/index.html
@@ -30,8 +30,8 @@
 
             else if (from[2] == 'K' || from[2] == 'k' ){
                 console.log("Es Kelvin");
-                //p = new Kelvin(aux[0]);
-                converted.innerHTML = "Aún no está la clase Kelvin";
+                p = new Kelvin(aux[0]);
+                
             }
 
             let to_ = aux[aux.length - 1];// HAcemos esto para contemplar la posibilidad de poner "to" o no
