--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../js/medida.js"></script>
     <script src="../js/temperatura.js"></script>
     <script src="../js/celsius.js"></script>
@@ -25,24 +26,22 @@
                 console.log("Es Fahrenheit");
                 p = new Fahrenheit(aux[0]);
                 console.log(p.get_val());
-                //converted.innerHTML = "Aún no está la clase Farenheit";
+
             }
 
             else if (from[2] == 'K' || from[2] == 'k' ){
-
-
                 console.log("Es Kelvin")
                 p = new Kelvin(aux[0]);
                 console.log(p.get_val());
 
             }
 
-            let to_ = aux[aux.length - 1];// HAcemos esto para contemplar la posibilidad de poner "to" o no
+            let to_ = aux[aux.length - 1];    // Hacemos esto para contemplar la posibilidad de poner "to" o no
             console.log(to_);
 
             if (to_=='C' || to_ == 'c' ){
-                console.log("A celcius");
-                converted.innerHTML = "La temperatura es " + p.toCelcius();
+                console.log("A Celcius");
+                converted.innerHTML = "La temperatura es " + p.toCelsius();
             }
             else if (to_ == 'F' || to_ == 'f' ){
                 console.log("A Fahrenheit");
@@ -52,32 +51,32 @@
                 console.log("A Kelvin");
                 converted.innerHTML = "La temperatura es " + p.toKelvin();
             }
-
-
-
-
-
-
-
-        //  console.log(p.get_val());
-        //  converted.innerHTML = "La temperatura es " + p.toFarenheit();
         }
 
     </script>
 
-
-
 </head>
 <body>
-<h1>Temperature Converter</h1>
+  <br>
+  <br>
+<div id="head"><h1>Temperature Converter</h1></div>
+  <br>
+  <br>
+<div id="tabla">
 <table>
     <tr>
         <th>Enter Temperature (examples: 32F, 45C, -2.5f):</th>
         <td><input id="original" autofocus onchange="get_val();" placeholder="32F" size="50"></td>
+    </tr>
 
+    <tr>
         <th>Converted Temperature:</th>
         <td><span class="output" id="converted"></span></td>
     </tr>
 </table>
+</div>
+<div id="footer">
+  <a id="repo" href="https://github.com/ULL-ESIT-DSI-1617/programacion-orientada-a-objetos-y-herencia-en-javascript-aitor-nestor-omar-35l2v3">Repositorio de GitHub</a>
+</div>
 </body>
 </html>
