--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    <script src="../js/medida.js"></script>
-    <script src="../js/temperatura.js"></script>
-    <script src="../js/celsius.js"></script>
-    <script src="../js/kelvin.js"></script>
-    <script src="../js/fahr.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
+    <script src="./js/medida.js"></script>
+    <script src="./js/temperatura.js"></script>
+    <script src="./js/celsius.js"></script>
+    <script src="./js/kelvin.js"></script>
+    <script src="./js/fahr.js"></script>
     <script>
         function get_val(){
             let regexp = /([-+]?\d+(?:\.\d*)?)\s*([fFcCkK])/;
